--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     
     
-    <img srs="fillingbd.png" alt="Image" />
+    <img srs="fillingbd.jpg" alt="Image" />
   
 <body>
   <html>
